# Compiled_UDF_engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  main.c
exp/: CMakeLists.txt  avg_word_len_cython_exp.c  avg_word_len_nuitka_exp.c  avg_word_len_numba_exp.c  avg_word_len_python_exp.c  mod_cython_exp.c  mod_nuitka_exp.c  mod_numba_exp.c  mod_python_exp.c  profile_parsing.py  roberta_cython_exp.c  roberta_nuitka_exp.c  roberta_python_exp.c  run_experiments.py
src/: CMakeLists.txt  buffer.c  buffer.h  engine.c  operator.c  operator.h  type.c  type.h
test/: CMakeLists.txt  add_cython_test.c  add_nuitka_test.c  add_numba_test.c  add_python_test.c  avg_word_len_cython_test.c  avg_word_len_nuitka_test.c  avg_word_len_numba_test.c  avg_word_len_python_test.c  concat_strings_cython_test.c  concat_strings_nuitka_test.c  concat_strings_numba_test.c  concat_strings_python_test.c  concat_timestamp_cython_test.c  concat_timestamp_nuitka_test.c  concat_timestamp_numba_test_excluded.c  concat_timestamp_python_test.c  mod_cython_test.c  mod_nuitka_test.c  mod_numba_test.c  mod_python_test.c  paths.h  roberta_cython_test.c  roberta_nuitka_test.c  roberta_python_test.c  vectorized_add_cython_test.c  vectorized_add_nuitka_test.c  vectorized_add_python_test.c  vectorized_avg_word_len_cython_test.c  vectorized_avg_word_len_nuitka_test.c  vectorized_avg_word_len_python_test.c  vectorized_concat_strings_cython_test.c  vectorized_concat_strings_nuitka_test.c  vectorized_concat_strings_python_test.c  vectorized_concat_timestamp_cython_test.c  vectorized_mod_cython_test.c  (+7 more)
(+54 files in other folders)
